第二章实训

--- a/eChares/day01/dome01.html
+++ b/eChares/day01/dome01.html
@@ -72,23 +72,21 @@
         },
         // 设置图表的图例
         legend: {
-            data:['销量', '产量']
+            data:['课程', '平均分']
         },
         // 设置X轴上显示的数据
         xAxis: {
-            data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+            data: ["数学","物理","化学","英语","语文","政治","生物","历史","地理"]
         },
         // 设置Y轴上显示的数据, 如果没有设置会根据数据自动填充
-        yAxis: {},
+        yAxis: {
+
+        },
         // 设置图表的数据
         series: [{
-            name: '销量',
+            name: '平均分',
             type: 'bar',
-            data: [5, 20, 36, 10, 10, 20]
-        },{
-            name: '产量',
-            type: 'bar',
-            data: [50, 120, 136, 60, 40, 80]
+            data: [67, 77, 87, 85, 84, 90,95,92,93]
         }]
     };
 
